Finihed 3.5 tasks
