# api/api.go
@@ -45,11 +45,14 @@ func NewApi(r *gin.Engine, cfg *config.Config, storage storage.StorageI, logger 
 	r.DELETE("/sale/:id", handler.DeleteSale)
 
 	// Sale Api
-	// r.POST("/sale", handler.CreateSale)
-	// r.GET("/sale/:id", handler.GetByIdSale)
-	// r.GET("/sale", handler.GetListSale)
-	// r.PUT("/sale/:id", handler.UpdateSale)
-	// r.DELETE("/sale/:id", handler.DeleteSale)
+	r.POST("/staff_transaction", handler.CreateStaffTransaction)
+	r.GET("/staff_transaction/:id", handler.GetByIdStaffTransaction)
+	r.GET("/staff_transaction", handler.GetListStaffTransaction)
+	r.PUT("/staff_transaction/:id", handler.UpdateStaffTransaction)
+	r.DELETE("/staff_transaction/:id", handler.DeleteStaffTransaction)
+
+	// Business Process Api
+	r.GET("/business_process", handler.GetTopWorker)
 
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
