# api/docs/swagger.yaml
@@ -372,6 +372,60 @@ paths:
       summary: Update Branch
       tags:
       - Branch
+  /business_process:
+    get:
+      consumes:
+      - application/json
+      description: Get Top Worker
+      operationId: get_top_worker
+      parameters:
+      - description: search
+        in: query
+        name: search
+        type: string
+      - description: from
+        in: query
+        name: from
+        type: string
+      - description: to
+        in: query
+        name: to
+        type: string
+      - description: ordered_by
+        in: query
+        name: ordered_by
+        type: string
+      responses:
+        "200":
+          description: Success Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Get Top Worker
+      tags:
+      - BusinessProcess
   /sale:
     get:
       consumes:
